[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Summary.gd" type="Script" id=1]
[ext_resource path="res://resource/black.jpg" type="Texture" id=2]
[ext_resource path="res://resource/fundo-loja.png" type="Texture" id=3]
[ext_resource path="res://resource/botoes.png" type="Texture" id=4]
[ext_resource path="res://resource/upgrade-sapatos.png" type="Texture" id=5]
[ext_resource path="res://resource/upgrade-etiqueta.png" type="Texture" id=6]
[ext_resource path="res://resource/upgrade-orelhas.png" type="Texture" id=7]
[ext_resource path="res://resource/jogo-gamux.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 300 )

[node name="Shop" type="Node2D"]
position = Vector2( 0, -1090 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1.33333, 0.421875 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
margin_top = 80.0
margin_right = 192.0
margin_bottom = 100.0
rect_scale = Vector2( 10, 10 )
text = "Fim do expediente"
align = 1
valign = 1

[node name="Profit" type="Label" parent="."]
margin_top = 340.0
margin_right = 480.0
margin_bottom = 363.0
rect_scale = Vector2( 4, 4 )
text = "Lucro: $xx"
align = 1
valign = 1

[node name="Total_customers" type="Label" parent="."]
margin_top = 430.0
margin_right = 480.0
margin_bottom = 453.0
rect_scale = Vector2( 4, 4 )
text = "Clientes atendidos: xx"
align = 1
valign = 1

[node name="Happy_customers" type="Label" parent="."]
margin_top = 520.0
margin_right = 480.0
margin_bottom = 543.0
rect_scale = Vector2( 4, 4 )
text = "Clientes satisfeitos: xx"
align = 1
valign = 1

[node name="Shop_button" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Shop_button"]
margin_left = 210.0
margin_top = 710.0
margin_right = 380.0
margin_bottom = 760.0
rect_scale = Vector2( 4, 4 )
text = "Loja"

[node name="Label" type="Label" parent="Shop_button"]
margin_left = 210.0
margin_top = 910.0
margin_right = 381.0
margin_bottom = 933.0
rect_scale = Vector2( 4, 4 )
text = "Banco: $xxx"
align = 1
valign = 1

[node name="Next_Day" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Next_Day"]
margin_left = 1070.0
margin_top = 710.0
margin_right = 1240.0
margin_bottom = 760.0
rect_scale = Vector2( 4, 4 )
text = "Próximo dia"

[node name="Label" type="Label" parent="Next_Day"]
margin_left = 1070.0
margin_top = 910.0
margin_right = 1241.0
margin_bottom = 933.0
rect_scale = Vector2( 4, 4 )
text = "Dia X de 7"
align = 1
valign = 1

[node name="Shop" type="Panel" parent="."]
margin_left = -1880.0
margin_top = 32.0
margin_right = -24.0
margin_bottom = 1048.0

[node name="Background" type="Sprite" parent="Shop"]
position = Vector2( 0, 6.10352e-005 )
scale = Vector2( 3.66142, 2.88636 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 159.97, 508.817, 352.134 )

[node name="Exit" type="Button" parent="Shop"]
margin_left = 1392.0
margin_top = 28.0002
margin_right = 1512.0
margin_bottom = 61.0002
rect_scale = Vector2( 3.5, 3.5 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Sair"

[node name="Title" type="Label" parent="Shop"]
margin_top = 88.0
margin_right = 186.0
margin_bottom = 108.0
rect_scale = Vector2( 10, 10 )
text = "Loja"
align = 1
valign = 1

[node name="Money" type="Label" parent="Shop"]
margin_left = 32.0
margin_top = 18.0
margin_right = 168.0
margin_bottom = 41.0
rect_scale = Vector2( 5, 5 )
text = "Banco: $xxx"
valign = 1

[node name="Shoes" type="Node2D" parent="Shop"]
position = Vector2( 32, 68 )

[node name="Button" type="Button" parent="Shop/Shoes"]
margin_top = 270.0
margin_right = 215.0
margin_bottom = 330.0
rect_scale = Vector2( 4, 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Shop/Shoes"]
position = Vector2( 158, 390 )
scale = Vector2( 0.309375, 0.309375 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="Shop/Shoes"]
margin_left = 208.0
margin_top = 300.0
margin_right = 363.0
margin_bottom = 323.0
rect_scale = Vector2( 4, 4 )
text = "Novos sapatos"
align = 1
valign = 1

[node name="Description" type="Label" parent="Shop/Shoes"]
margin_left = 208.0
margin_top = 360.0
margin_right = 415.0
margin_bottom = 380.0
rect_scale = Vector2( 3, 3 )
text = "Aumentam sua velocidade"
align = 1
valign = 1

[node name="Price" type="Label" parent="Shop/Shoes"]
margin_left = 178.0
margin_top = 410.0
margin_right = 333.0
margin_bottom = 430.0
rect_scale = Vector2( 4, 4 )
text = "$50"
align = 1
valign = 1

[node name="Etiquette" type="Node2D" parent="Shop"]
position = Vector2( 32, 368 )

[node name="Button" type="Button" parent="Shop/Etiquette"]
margin_top = 270.0
margin_right = 215.0
margin_bottom = 330.0
rect_scale = Vector2( 4, 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Shop/Etiquette"]
position = Vector2( 159.9, 388.1 )
scale = Vector2( 0.305078, 0.305078 )
texture = ExtResource( 6 )

[node name="Title" type="Label" parent="Shop/Etiquette"]
margin_left = 198.0
margin_top = 300.0
margin_right = 353.0
margin_bottom = 323.0
rect_scale = Vector2( 4, 4 )
text = "Aulas de etiqueta"
align = 1
valign = 1

[node name="Description" type="Label" parent="Shop/Etiquette"]
margin_left = 198.0
margin_top = 362.0
margin_right = 405.0
margin_bottom = 382.0
rect_scale = Vector2( 3, 3 )
text = "Clientes são mais pacientes"
align = 1
valign = 1

[node name="Price" type="Label" parent="Shop/Etiquette"]
margin_left = 178.0
margin_top = 410.0
margin_right = 333.0
margin_bottom = 430.0
rect_scale = Vector2( 4, 4 )
text = "$50"
align = 1
valign = 1

[node name="Cat_Ears" type="Node2D" parent="Shop"]
position = Vector2( 962, 68 )

[node name="Button" type="Button" parent="Shop/Cat_Ears"]
margin_top = 270.0
margin_right = 215.0
margin_bottom = 330.0
rect_scale = Vector2( 4, 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Shop/Cat_Ears"]
position = Vector2( 158, 390 )
scale = Vector2( 0.309375, 0.309375 )
texture = ExtResource( 7 )

[node name="Title" type="Label" parent="Shop/Cat_Ears"]
margin_left = 198.0
margin_top = 300.0
margin_right = 353.0
margin_bottom = 323.0
rect_scale = Vector2( 4, 4 )
text = "Orelhas de gato"
align = 1
valign = 1

[node name="Description" type="Label" parent="Shop/Cat_Ears"]
margin_left = 208.0
margin_top = 362.0
margin_right = 415.0
margin_bottom = 382.0
rect_scale = Vector2( 3, 3 )
text = "Atrai mais clientes"
align = 1
valign = 1

[node name="Price" type="Label" parent="Shop/Cat_Ears"]
margin_left = 178.0
margin_top = 410.0
margin_right = 333.0
margin_bottom = 430.0
rect_scale = Vector2( 4, 4 )
text = "$50"
align = 1
valign = 1

[node name="Game" type="Node2D" parent="Shop"]
position = Vector2( 962, 368 )

[node name="Button" type="Button" parent="Shop/Game"]
margin_top = 270.0
margin_right = 215.0
margin_bottom = 330.0
rect_scale = Vector2( 4, 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Shop/Game"]
position = Vector2( 168, 390 )
scale = Vector2( 0.321484, 0.321484 )
texture = ExtResource( 8 )

[node name="Title" type="Label" parent="Shop/Game"]
margin_left = 208.0
margin_top = 300.0
margin_right = 363.0
margin_bottom = 323.0
rect_scale = Vector2( 4, 4 )
text = "Gamux of the Night"
align = 1
valign = 1

[node name="Description" type="Label" parent="Shop/Game"]
margin_left = 208.0
margin_top = 362.0
margin_right = 415.0
margin_bottom = 382.0
rect_scale = Vector2( 3, 3 )
text = "Objetivo de vida"
align = 1
valign = 1

[node name="Price" type="Label" parent="Shop/Game"]
margin_left = 188.0
margin_top = 410.0
margin_right = 343.0
margin_bottom = 430.0
rect_scale = Vector2( 4, 4 )
text = "$999"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]
